--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://blog.yonflee.us.kg"
+baseurl = "https://blog.543083.xyz"
 languageCode = "en-us"
 paginate = 5
 title = "Hugo Theme Stack Starter"
