--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,7 +1,7 @@
 # Change baseurl before deploy
 baseurl = "https://blog.543083.xyz"
 languageCode = "en-us"
-paginate = 5
+pagination.pagerSize = 5
 title = "Hugo Theme Stack Starter"
 
 # Theme i18n support
